# Junment

./: README.md  chat.md  claude-context-agent-plan.md  pyproject.toml  python-mcp-agent-architecture.md  settings.json.example
context_agent/: __init__.py  app.py  cli.py  config.py  debug_log.py  logging_config.py
context_agent/adapters/: __init__.py  claude_hook.py  openai_compatible.py
context_agent/agents/: __init__.py  gate.py  judge.py  planner.py  summarizer.py
context_agent/prompts/: judge.md  planner.md  summarizer.md
context_agent/schemas/: __init__.py  candidate.py  context_pack.py  hook_io.py  score.py  search_plan.py
context_agent/services/: __init__.py  candidate_discovery.py  candidate_expansion.py  context_pack_builder.py  file_loader.py  repository_snapshot.py  score_selection.py
context_agent/tools/: __init__.py  doc_locator.py  file_reader.py  grep_search.py  lsp_client.py
context_agent/workflows/: __init__.py  build_context.py
src/junment_context_agent/: __init__.py
tests/: test_candidate_discovery.py  test_claude_hook_adapter.py  test_cli.py  test_config.py  test_context_pack_builder.py  test_debug_log.py  test_gate.py  test_lsp_client.py  test_openai_compatible.py  test_score_selection.py  test_search_plan.py
