[project]
name = "junment-context-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "papillon", email = "uzhaojy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.38.2",
    "mcp-agent[openai]>=0.2.6",
]

[project.scripts]
junment-context-agent = "context_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_agent"]

[dependency-groups]
dev = []
